--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
+  <a class="site-title" href="{{ "/" | relative_url}}"><span class="title-text">{{ site.title | escape }}</span></a>
 
     <nav class="site-nav">
       <span class="menu-icon">
