--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,12 +1,7 @@
 // Define defaults for each variable.
 
-// $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 
-$base-font-family: 'Rokkitt', serif !default;
-// $base-font-family: 'Cinzel', serif !default;
-// $base-font-family: 'Marcellus', serif !default;
-// $base-font-family: 'Alegreya SC', serif !default;
-// $base-font-family: 'Mate SC', serif !default;
 
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
