--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,13 +4,19 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+// $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: 'Rokkitt', serif !default;
+// $base-font-family: 'Cinzel', serif !default; //naw
+// $base-font-family: 'Marcellus', serif !default; // too tight
+
+// $base-font-family: 'Mate SC', serif !default;
+
+$base-font-size:   14px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size:  $base-font-size * 1.175;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     32px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
@@ -25,6 +31,13 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
+
+.site-title {
+  font-family: 'Alegreya SC'; // Good match!
+}
+.title-text {
+    letter-spacing: 3px;
+}
 
 // Minima also includes a mixin for defining media queries.
 // Use media queries like this:
