--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
-              {{ site.title | escape }}
+              {{ site.business_title | escape }}
             {% endif %}
             </li>
             {% if site.email %}
