--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,10 @@
 ---
 layout: default
 ---
-
+<div class="img-placemat">
+  <img src="/assets/jumbo.png" />
+  <div class="img-footer"></div>
+</div>
 <!-- <div class="home">
 
   <h1 class="page-heading">Posts</h1>
