--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,9 +5,10 @@
 
 // Our variables
 // $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-family: 'Rokkitt', serif !default;
-// $base-font-family: 'Cinzel', serif !default; //naw
-// $base-font-family: 'Marcellus', serif !default; // too tight
+// $base-font-family: 'Rokkitt', serif !default;
+
+$base-font-family: 'Marcellus', serif !default; // too tight
+
 
 // $base-font-family: 'Mate SC', serif !default;
 
@@ -33,11 +34,26 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 .site-title {
-  font-family: 'Alegreya SC'; // Good match!
+  // font-family: 'Alegreya SC'; // Good match!
 }
 .title-text {
     letter-spacing: 3px;
 }
+
+h1, h2, h3, h4, h5, p, li, span {
+  letter-spacing: .805px;
+}
+
+.img-placemat {
+
+}
+
+.img-footer {
+
+}
+
+
+
 
 // Minima also includes a mixin for defining media queries.
 // Use media queries like this:
@@ -50,3 +66,7 @@ $on-laptop:        800px;
 
 // Import partials from the `minima` theme.
 @import "minima";
+
+a:visited, a:hover {
+  color: #002355;
+}
