--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,13 @@
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Cinzel|Marcellus|Mate+SC|Rokkitt" rel="stylesheet">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+
+
 
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
