--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,20 @@
       </div>
     </main>
 
+<div class="container">
     {% include footer.html %}
+  </div>
 
+
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="/js/materialize.min.js"></script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+   $('ul.tabs').tabs('select_tab', 'tab_id');
+ });
+
+  </script>
   </body>
 
 </html>
