--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,21 @@
 ---
 layout: default
 ---
-<div class="img-placemat">
-  <img src="/assets/jumbo.png" />
-  <div class="img-footer"></div>
+{% include card-screenshot.html %}
+
+
+<div class="row">
+<div class="col offset-s7">
+
+
+    <a href="//eepurl.com/cECuxT" class="waves-effect waves-light btn"><i class="fa fa-envelope-o" aria-hidden="true"></i> Keep in Touch</a>
 </div>
+
+</div>
+
+
+
+
 <!-- <div class="home">
 
   <h1 class="page-heading">Posts</h1>
