--- a/assets/main.scss
+++ b/assets/main.scss
@@ -52,6 +52,11 @@ h1, h2, h3, h4, h5, p, li, span {
 
 }
 
+blockquote {
+  // border-left: none;
+
+}
+
 
 
 
@@ -66,6 +71,7 @@ h1, h2, h3, h4, h5, p, li, span {
 
 // Import partials from the `minima` theme.
 @import "minima";
+@import "materialize";
 
 a:visited, a:hover {
   color: #002355;
