looks ready for final looks

--- a/about.haml
+++ b/about.haml
@@ -26,7 +26,7 @@ permalink: /about/
       %div
         %p
           %span
-            Understand a bit of the technical? See all the code for this contact site on
+            Understand a bit of the technical stuff? See all the code for this contact site on
             %a{:href => "https://github.com/renemarcelo/100-civic-questions-quiz"}
               Github
               %i.fa.fa-github-alt{"aria-hidden" => "true"}.
@@ -51,7 +51,7 @@ permalink: /about/
 
       %p
         We are not the
-        %a{:href => "http://www.illinoiscourts.gov/CivilJustice/LanguageAccess/default.asp"} Illinois Courts Language Access Program.
+        %a.light-blue-text{:href => "http://www.illinoiscourts.gov/CivilJustice/LanguageAccess/default.asp"} Illinois Courts Language Access Program.
 .row
   .container
     .col-md-7.col-md-offset-2.col-xs-9.col-xs-offset-1
