--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,11 +22,11 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          {% if site.github_username %}
+          <!-- {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
           </li>
-          {% endif %}
+          {% endif %} -->
 
           {% if site.twitter_username %}
           <li>
