--- a/contact.haml
+++ b/contact.haml
@@ -8,39 +8,43 @@ permalink: /contact/
   .col.s12.m6
     .card.blue-grey.darken-1
       .card-content.white-text
-        %span.card-title Connect!
+        %span.card-title Happy Connecting!
         %p
 
           %span.fa-stack.fa-lg
             %i.fa.fa-square-o.fa-stack-2x{"aria-hidden" => "true"}
             %i.fa.fa-phone.fa-stack-1x{"aria-hidden" => "true"}
-          fa-twitter on fa-square-o
+          (872) 216-9825
           %br/
           %span.fa-stack.fa-lg
-            %i.fa.fa-circle.fa-stack-2x{"aria-hidden" => "true"}
-            %i.fa.fa-flag.fa-stack-1x.fa-inverse{"aria-hidden" => "true"}
-          fa-flag on fa-circle
+            %i.fa.fa-square-o.fa-stack-2x{"aria-hidden" => "true"}
+            %i.fa.fa-envelope-o.fa-stack-1x.fa-inverse{"aria-hidden" => "true"}
+          %a.white-text{:href => "mailto:#"} info@caselinguist.com
           %br/
           %span.fa-stack.fa-lg
-            %i.fa.fa-square.fa-stack-2x{"aria-hidden" => "true"}
-            %i.fa.fa-terminal.fa-stack-1x.fa-inverse{"aria-hidden" => "true"}
-          fa-terminal on fa-square
+            %i.fa.fa-square-o.fa-stack-2x{"aria-hidden" => "true"}
+            %i.fa.fa-twitter.fa-stack-1x.fa-inverse{"aria-hidden" => "true"}
+          %a.white-text{:href => "//twitter.com/caselinguist"} @caselinguist
           %br/
-          %span.fa-stack.fa-lg
-            %i.fa.fa-camera.fa-stack-1x{"aria-hidden" => "true"}
-            %i.fa.fa-ban.fa-stack-2x.text-danger{"aria-hidden" => "true"}
-          fa-ban on fa-camera
-
-
+          -# %span.fa-stack.fa-lg
+          -#   %i.fa.fa-square-o.fa-stack-1x{"aria-hidden" => "true"}
+          -#   %i.fa.fa-ban.fa-stack-2x.text-danger{"aria-hidden" => "true"}
+          -# fa-ban on fa-camera
+          -#
+          -#
   .col.s12.m6
     %p
+      %strong Billing Address
       %address
-        %strong Billing Address
-        %br/
-        %a{:href => "mailto:#"} first.last@example.com
 
-      %strong
-        Billing Address
+        %strong Case Linguist LLC
+        %br/
+        5829 S. Francisco Ave
+        %br/
+        Chicago, IL 60629
+        %br/
+        -# %abbr{:title => "Phone"} P:
+        -# (123) 456-7890
 
 
 
