--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,18 +3,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+
+  <!-- realfavicongenerator.com -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/assets/fav/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/assets/fav/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/assets/fav/manifest.json">
+  <link rel="mask-icon" href="/assets/fav/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="apple-mobile-web-app-title" content="Case Linguist">
+  <meta name="application-name" content="Case Linguist">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- google fonts -->
-  <link href="//fonts.googleapis.com/css?family=Alegreya+SC|Cinzel|Marcellus|Mate+SC|Rokkitt" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Marcellus" rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-
-
-
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
