--- a/assets/main.scss
+++ b/assets/main.scss
@@ -33,9 +33,6 @@ $content-width:    875px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
-.site-title {
-  // font-family: 'Alegreya SC'; // Good match!
-}
 .title-text {
     letter-spacing: 3px;
 }
@@ -43,22 +40,6 @@ $on-laptop:        800px;
 h1, h2, h3, h4, h5, p, li, span {
   letter-spacing: .805px;
 }
-
-.img-placemat {
-
-}
-
-.img-footer {
-
-}
-
-blockquote {
-  // border-left: none;
-
-}
-
-
-
 
 
 // Minima also includes a mixin for defining media queries.
@@ -78,7 +59,6 @@ a:visited, a:hover {
   color: #002355;
 }
 
-
 address {
-  font-family: Helvetica;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
