--- a/_includes/card-screenshot.html
+++ b/_includes/card-screenshot.html
@@ -1,5 +1,7 @@
 <div class="row">
   <div class="col s12 m12">
+　　<!-- TODO: fix minimized nav button 'slip-back' that z index won't fix     -->
+    <br/>
     <div class="card blue-grey darken-4">
       <img class='img-card' src="/assets/card_screenshot.png" />
     </div>
