--- a/_sass/materialize.scss
+++ b/_sass/materialize.scss
@@ -44,7 +44,7 @@ $primary-color: color("blue", "darken-3") !default;
 @import "materialize/icons-material-design";
 @import "materialize/grid";
 // @import "materialize/navbar"; // Navbar fine the way it is
-@import "materialize/roboto";
+// @import "materialize/roboto";
 @import "materialize/typography";
 @import "materialize/transitions";
 @import "materialize/cards";
