--- a/assets/main.scss
+++ b/assets/main.scss
@@ -62,3 +62,15 @@ a:visited, a:hover {
 address {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+.blog-font {
+font-family: roboto-slab,serif;
+font-weight: 300;
+font-style: normal;
+}
+
+.strong-blog-font {
+  font-family: roboto-slab, serif;
+  font-weight: 700;
+  font-style: normal;
+}
