--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,11 +19,17 @@
 
   <!-- google fonts -->
   <link href="//fonts.googleapis.com/css?family=Marcellus" rel="stylesheet">
+
+  <!-- typekit fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/omz2dhn.css">
+  
   <!-- font awesome -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+
+
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
