--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,15 +4,15 @@ layout: default
 <article class="post" itemscope itemtype="//schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    <h1 class="post-title strong-blog-font" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p class="post-meta strong-blog-font"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content blog-font" itemprop="articleBody">
     {{ content }}
   </div>
 
-  {% if site.disqus.shortname %}
+  {% if site.tags %}
     {% include disqus_comments.html %}
   {% endif %}
 </article>
