--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,10 +7,14 @@
 // $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 // $base-font-family: 'Rokkitt', serif !default;
 
-$base-font-family: 'Marcellus', serif !default; // too tight
+ // $base-font-family:'Raleway', sans-serif; // NOTE: LOOKS SQUISHED   7/10
+
+ $base-font-family:'Assistant', sans-serif; // // NOTE: IS ON-MESSAGE , LOOKS MARKET-Y 7.7/10
+ // $base-font-family:'Cabin', sans-serif;  //NOTE:  looks malleable, flexible : 5/10 but with potential (lighter?)
 
 
-// $base-font-family: 'Mate SC', serif !default;
+
+
 
 $base-font-size:   14px;
 $base-font-weight: 400;
@@ -33,44 +37,37 @@ $content-width:    875px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
-.title-text {
+.title-text,{
     letter-spacing: 3px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+// font-family: 'Assistant', sans-serif;
+// font-family: 'Cabin', sans-serif;
+}
+
+.post-title {
+  font-family: 'Assistant', sans-serif;
 }
 
 h1, h2, h3, h4, h5, p, li, span {
   letter-spacing: .805px;
 }
 
-
-// Minima also includes a mixin for defining media queries.
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-
-// Import partials from the `minima` theme.
 @import "minima";
-@import "materialize";
+@import 'materialize';
 
 a:visited, a:hover {
   color: #002355;
 }
 
-address {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
 
 .blog-font {
-font-family: roboto-slab,serif;
-font-weight: 300;
-font-style: normal;
+  font-family: 'Cabin', sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .strong-blog-font {
-  font-family: roboto-slab, serif;
+  font-family: 'Cabin', sans-serif;
   font-weight: 700;
   font-style: normal;
 }
