--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     {% include footer.html %}
   </div>
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" integrity="sha256-U/cHDMTIHCeMcvehBv1xQ052bPSbJtbuiw4QA9cTKz0=" crossorigin="anonymous"></script>
   </body>
 
 </html>
