updated alt tags

--- a/_includes/card-screenshot.html
+++ b/_includes/card-screenshot.html
@@ -3,7 +3,7 @@
 　　<!-- TODO: fix minimized nav button 'slip-back' that z index won't fix     -->
     <br/>
     <div class="card blue-grey darken-4">
-      <img class='img-card' src="/assets/card_screenshot.png" />
+      <img class='img-card' src="/assets/digital-business-card.png" alt="rene m. paccha case linguist llc info@caselinguist.com"/>
     </div>
   </div>
 </div>
