--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ excerpt_separator: <!--more-->
         </li>
 
         <p class="align-right">
-          <a class="blog-font" href="{{ post.url | relative_url }}"><em class="strong-blog-font">SEE MORE...</em></a>
+          <a class="blog-font" href="{{ post.url | relative_url }}"><em class="strong-blog-font">Keep Reading...</em></a>
         </p>
 
 
