--- a/_includes/card-screenshot.html
+++ b/_includes/card-screenshot.html
@@ -3,7 +3,9 @@
 　　<!-- TODO: fix minimized nav button 'slip-back' that z index won't fix     -->
     <br/>
     <div class="card blue-grey darken-4">
-      <img class='img-card' src="/assets/digital-business-card.png" alt="rene m. paccha case linguist llc info@caselinguist.com"/>
+      <a href="{{ "/about/" | relative_url }}">
+        <img class='img-card' src="/assets/digital-business-card.png" alt="rene m. paccha case linguist llc info@caselinguist.com"/>
+      </a>
     </div>
   </div>
 </div>
