--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,12 @@
   <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin" rel="stylesheet">
 
   <!-- font awesome -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+
+  <!-- materialize -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" integrity="sha256-U/cHDMTIHCeMcvehBv1xQ052bPSbJtbuiw4QA9cTKz0=" crossorigin="anonymous"></script>
+  <!-- payment -->
+  <script src="https://js.braintreegateway.com/web/dropin/1.16.0/js/dropin.min.js"></script>
 
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
