--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,5 +40,22 @@ excerpt_separator: <!--more-->
       {% include card-screenshot.html %}
     </div>
 
+
+
+
+  </div>
+
+
+  <div class="row">
+    <div class="col s12 m8 l7">
+      {% include payment-card.html %}
+    </div>
+  </div>
+
+  <!-- test -->
+  <div class="row">
+    <div class="col s12 m8 l7">
+      {% include payment-card-test.html %}
+    </div>
   </div>
 </div>
