--- a/_includes/payment-card-test.html
+++ b/_includes/payment-card-test.html
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="col s12 m12">
-　　<!-- TODO: fix minimized nav button 'slip-back' that z index won't fix     -->
+    <!-- TODO: fix minimized nav button 'slip-back' that z index won't fix     -->
     <br/>
     <div class="card">
       <div class="card-content waves-effect waves-block waves-light">
         <h3>*TESTing Only* Upgrade Technical SEO For Your Law Firm</h3>
         <ul class="collection">
-        <li class="collection-item">XML Sitemap</li>
-        <li class="collection-item">Site SEO Audit</li>
-        <li class="collection-item">Robots.txt</li>
-        <li class="collection-item">Index Optimization</li>
-        <li class="collection-item">Compress Images</li>
-      </ul>
+          <li class="collection-item">XML Sitemap</li>
+          <li class="collection-item">Site SEO Audit</li>
+          <li class="collection-item">Robots.txt</li>
+          <li class="collection-item">Index Optimization</li>
+          <li class="collection-item">Compress Images</li>
+        </ul>
       </div>
       <div class="card-content">
 
@@ -22,7 +22,7 @@
 
 
         <div id="dropin-container-test"></div>
-        <button class="activator waves-effect waves-light btn btn-flat ilike-amber-container" id="submit-button-test">request payment method</button>
+        <button class="waves-effect waves-light btn btn-flat ilike-amber-container" id="submit-button-test">request payment method</button>
         <!-- NOTE: AMOUNT  -->
         <h4>The amount charged will be $1</h4>
       </div>
