--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,11 +45,11 @@ excerpt_separator: <!--more-->
 
   </div>
 
-
-  <div class="row">
+  <!-- drop to sandbox -->
+  <!-- <div class="row">
     <div class="col s12 m8 l7">
       {% include payment-card.html %}
     </div>
-  </div>
+  </div> -->
 
 </div>
