--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,53 +3,41 @@ layout: default
 excerpt_separator: <!--more-->
 ---
 
-<!-- BLOG START -->
-<div class="home home-section section">
-  <div class="row">
-    <div class="col s12 m4 l5 ">
-
-
-      <h1 class="page-heading strong-blog-font">Posts</h1>
-
+<div class='home home-section section'>
+  <div class='row'>
+    <div class='col s12 m4 l5'>
+      <h1 class='page-heading strong-blog-font'>
+        Posts
+      </h1>
       {{ content }}
-
-      <ul class="post-list">
+      <ul class='post-list'>
         {% for post in site.posts %}
         <li>
-          <span class="post-meta strong-blog-font">{{ post.date | date: "%b %-d, %Y" }}</span>
-
+          <span class='post-meta strong-blog-font'>{{ post.date | date: "%b %-d, %Y" }}</span>
           <h2>
-            <a class="post-link strong-blog-font" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+            <a class='post-link strong-blog-font' href='{{ post.url | relative_url }}'>{{ post.title | escape }}</a>
           </h2>
-          <span class="blog-font">{{ post.excerpt }}</span>
+          <span class='blog-font'>{{ post.excerpt }}</span>
         </li>
-
-        <p class="align-right">
-          <a class="blog-font" href="{{ post.url | relative_url }}"><em class="strong-blog-font">Keep Reading...</em></a>
+        <p class='align-right'>
+          <a class='blog-font' href='{{ post.url | relative_url }}'>
+            <em class='strong-blog-font'>Keep Reading...</em>
+          </a>
         </p>
-
-
         {% endfor %}
       </ul>
-
-      <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+      <p class='rss-subscribe'>
+        subscribe
+        <a href='{{ "/feed.xml" | relative_url }}'>via RSS</a>
+      </p>
     </div>
-
-
-    <div class="col s12 m8 l7">
+    <div class='col s12 m8 l7'>
       {% include card-screenshot.html %}
     </div>
-
-
-
-
-  </div>
-
-  <!-- drop to sandbox -->
-  <!-- <div class="row">
-    <div class="col s12 m8 l7">
-      {% include payment-card.html %}
+    <div class='row'>
+      <div class='col s12 m8 l7'>
+        {% include payment-card.html %}
+      </div>
     </div>
-  </div> -->
-
+  </div>
 </div>
