--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="//schema.org/BlogPosting">
 
+<article class="post" itemscope itemtype="//schema.org/BlogPosting">
   <header class="post-header">
     <h1 class="post-title strong-blog-font" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta strong-blog-font"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"></span>{% endif %}</p>
+    <p class="post-meta strong-blog-font"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %}<span itemprop="author" itemscope itemtype="http://schema.org/Person"></span>{% endif %}</p>
   </header>
 
   <div class="post-content blog-font" itemprop="articleBody">
@@ -13,6 +13,6 @@ layout: default
   </div>
 
   {% if site.tags %}
-    {% include disqus_comments.html %}
+  {% include disqus_comments.html %}
   {% endif %}
 </article>
