--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,14 +32,15 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    875px;
+$content-width:    1175px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
 
-.title-text,{
+.title-text {
     letter-spacing: 3px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 // font-family: 'Assistant', sans-serif;
 // font-family: 'Cabin', sans-serif;
 }
