including tiny favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,14 +8,16 @@
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <!-- realfavicongenerator.com -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/fav/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/assets/fav/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/assets/fav/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/assets/fav/manifest.json">
-  <link rel="mask-icon" href="/assets/fav/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
-  <meta name="application-name" content="{{ site.title }}">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/fav/apple-touch-icon.png?v=XBJXMzz8jN">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/fav/favicon-32x32.png?v=XBJXMzz8jN">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/fav/favicon-16x16.png?v=XBJXMzz8jN">
+  <link rel="manifest" href="assets/fav/site.webmanifest?v=XBJXMzz8jN">
+  <link rel="shortcut icon" href="assets/fav/favicon.ico?v=XBJXMzz8jN">
+  <meta name="apple-mobile-web-app-title" content="Marketing for Lawyers">
+  <meta name="application-name" content="Marketing for Lawyers">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-config" content="assets/fav/browserconfig.xml?v=XBJXMzz8jN">
+  <meta name="theme-color" content="#000000">
 
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin" rel="stylesheet">
