--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,8 @@
 
   <script>
   var button = document.querySelector('#submit-button-test');
-  var tokenizationKey = 'sandbox_t8qqbp4r_k4g8wqgx66xht83b'
+  var tokenizationKey = 'sandbox_t8qqbp4r_k4g8wqgx66xht83b';
+  var submitButton = document.querySelector('#submit-button');
 
   braintree.dropin.create({
     authorization: tokenizationKey,
