--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,6 @@ layout: default
   </div>
 
   {% if site.tags %}
-  {% include disqus_comments.html %}
+  <!-- {% include disqus_comments.html %} -->
   {% endif %}
 </article>
