--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,18 +6,17 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %} | {{site.marketing_title}}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-
   <!-- realfavicongenerator.com -->
-  <link rel="apple-touch-icon" sizes="180x180" href='{{ "/assets/fav/apple-touch-icon.png?v=XBJXMzz8jN" | relative_url }}'>
-  <link rel="icon" type="image/png" sizes="32x32" href='{{ "/assets/fav/favicon-32x32.png?v=XBJXMzz8jN" | relative_url }}'>
-  <link rel="icon" type="image/png" sizes="16x16" href='{{ "/assets/fav/favicon-16x16.png?v=XBJXMzz8jN" | relative_url }}'>
-  <link rel="manifest" href='{{ "/assets/fav/site.webmanifest?v=XBJXMzz8jN" | relative_url }}'>
-  <link rel="shortcut icon" href='{{ "/assets/fav/favicon.ico?v=XBJXMzz8jN" | relative_url }}'>
-  <meta name="apple-mobile-web-app-title" content="Marketing for Lawyers">
-  <meta name="application-name" content="Marketing for Lawyers">
-  <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="msapplication-config" content='{{ /"assets/fav/browserconfig.xml?v=XBJXMzz8jN" | relative_url }}'>
-  <meta name="theme-color" content="#000000">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/fav/apple-touch-icon.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/fav/favicon-32x32.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/fav/favicon-16x16.png' | relative_url }}">
+  <link rel="manifest" href="{{ '/assets/fav/site.webmanifest' | relative_url }}">
+  <link rel="mask-icon" href="{{ '/assets/fav/safari-pinned-tab.svg' | relative_url }}" color="#2b5797">
+  <link rel="shortcut icon" href="{{ '/assets/fav/favicon.ico' | relative_url }}">
+  <meta name="msapplication-TileColor" content="#ffc40d">
+  <meta name="msapplication-config" content="{{ '/assets/fav/browserconfig.xml' | relative_url }}">
+  <meta name="theme-color" content="#ffffff">
+
 
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin" rel="stylesheet">
