--- a/_includes/payment-card-test.html
+++ b/_includes/payment-card-test.html
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="col s12 m12">
     <br/>
@@ -5,7 +6,15 @@
       <div class="card-content waves-effect waves-block waves-light">
         <h3>*TESTing Only* Upgrade Technical SEO For Your Law Firm</h3>
         <ul class="collection">
-          <li class="collection-item">XML Sitemap</li>
+            <li class="collection-item">
+                <span class="align-right">
+                <label>
+                    <input type="checkbox" value="50" id="Technical-1" />
+                    <span>XML Sitemap</span>
+                </label>
+                </span>
+            </li>
+
           <li class="collection-item">Site SEO Audit</li>
           <li class="collection-item">Robots.txt</li>
           <li class="collection-item">Index Optimization</li>
@@ -20,29 +29,35 @@
         <div id="dropin-container-test"></div>
         <button class="waves-effect waves-light btn btn-flat ilike-amber-container" id="submit-button-test">request payment method</button>
         <h4>The amount charged will be $1</h4>
+
+        <div class="card-charge-info">
+            Your card will be charged $<span id="payment-total">0</span> now, and your subscription will bill $<span id="payment-rebill">0</span> every month thereafter. You can cancel or change plans anytime.
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<script>
-var button = document.querySelector('#submit-button-test');
-var tokenizationKey = 'sandbox_t8qqbp4r_k4g8wqgx66xht83b';
-var submitButton = document.querySelector('#submit-button');
 
-braintree.dropin.create({
-  authorization: tokenizationKey,
-  container: '#dropin-container-test',
-  paypal: {
-    flow: 'checkout',
-    amount: '1.00',
-    currency: 'USD'
-  }
-}, function (createErr, instance) {
-  button.addEventListener('click', function () {
-    instance.requestPaymentMethod(function (requestPaymentMethodErr, payload) {
-      // Submit payload.nonce to your server
-    });
-  });
-});
+<script>
+
+ var button = document.querySelector('#submit-button-test');
+ var tokenizationKey = 'sandbox_t8qqbp4r_k4g8wqgx66xht83b';
+ var submitButton = document.querySelector('#submit-button');
+
+ braintree.dropin.create({
+     authorization: tokenizationKey,
+     container: '#dropin-container-test',
+     paypal: {
+         flow: 'checkout',
+         amount: '1.00',
+         currency: 'USD'
+     }
+ }, function (createErr, instance) {
+     button.addEventListener('click', function () {
+         instance.requestPaymentMethod(function (requestPaymentMethodErr, payload) {
+             // Submit payload.nonce to your server
+         });
+     });
+ });
 </script>
