--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,11 @@
     {% include footer.html %}
   </div>
 
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+  var elems = document.querySelectorAll('.slider');
+  var instances = M.Slider.init(elems, options);
+</script>
+
 </body>
 </html>
