--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,22 +46,25 @@ excerpt_separator: <!--more-->
     <!-- end pricing -->
   </div>
 
+  <div class="divider"></div>
+  <div class="section">
+    <h4>Why get law SEO à la carte?</h4>
+
+
+
+
+
+
+
   <div class="row">
-    <div class="col s12"></div>
-
-
-
-    <div class="col s7 offset-s5">
-      <!-- <hr /> -->
-
+    <div class="col s12 m7 push-m5">
+      <img class="materialboxed center-align " width="650" src="{{ '/assets/rene-m-paccha-chicago.jpg' | relative_url }}">
     </div>
 
-  </div>
+    <div class="col s12 m5 pull-m7">
+      <div class="container">
+    <br />
 
-
-
-  <div class="row">
-    <div class="col m12">
       {% for post in site.posts limit:1  %}
       {% assign currentdate = post.date | date: "%B" %}
       {% if currentdate != date %}
@@ -77,8 +80,15 @@ excerpt_separator: <!--more-->
         <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% if forloop.last %}</ul>{% endif %}
         {% endfor %}
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s7 offset-s5">
 
     </div>
 
   </div>
 </div>
+  </div>
