--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,9 @@ excerpt_separator: <!--more-->
 
   <div class="divider"></div>
   <div class="section">
-    <h4>Why get law SEO à la carte?</h4>
+    <br/>
+
+
 
 
 
@@ -91,4 +93,14 @@ excerpt_separator: <!--more-->
 
   </div>
 </div>
+
+
+  <div class="section">
+        <!-- <h4>Why get law SEO à la carte?</h4> -->
+        <!-- <h4>Get law SEO à la carte</h4> -->
+
+
+  </div>
+
+
   </div>
