--- a/assets/main.scss
+++ b/assets/main.scss
@@ -54,6 +54,13 @@ h1, h2, h3, h4, h5, p, li, span {
   letter-spacing: .805px;
 }
 
+#pew-hispanic-container {
+	min-width: 310px;
+	// max-width: 800px;
+	height: 400px;
+	margin: auto auto
+}
+
 @import "minima";
 @import 'materialize';
 
