--- a/_includes/charts/pew-population-chart.html
+++ b/_includes/charts/pew-population-chart.html
@@ -1,4 +1,100 @@
-<iframe src="https://www.pewhispanic.org/chart/immigrant-statistical-portrait-foreign-born-population-in-the-united-states/iframe/" id="pew25605" scrolling="no" width="100%" height="100px" frameborder="0"></iframe>
+<div class="card">
+  <div class="card-content">
+<div id="pew-hispanic-container"></div>
+  </div>
 
-<script type='text/javascript'id='pew-iframe'>(function(){function async_load(){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src='https://www.pewhispanic.org/wp-content/plugins/pew-scripts/js/iframeResizer.min.js';s.onload=s.onreadystatechange=function(){var rs=this.readyState;try{iFrameResize([],'iframe#pew25605')}catch(e){}};var embedder=document.getElementById('pew-iframe');embedder.parentNode.insertBefore(s,embedder)}if(window.attachEvent)window.attachEvent('onload',async_load);else window.addEventListener('load',async_load,false)})();</script>
+</div>
 
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var myChart =   Highcharts.chart('pew-hispanic-container', {
+        chart: {
+          type: 'line'
+        },
+        title: {
+          text: 'Foreign-born population in the United States, 1850-2016'
+        },
+
+        subtitle: {
+          text: 'Source: <a href="https://www.pewhispanic.org/2018/09/14/facts-on-u-s-immigrants/#fb-key-charts-population">' +
+            'pewhispanic.org</a>'
+          },
+          xAxis: {
+            type: 'datetime'
+          },
+
+          yAxis: {
+            title: {
+              text: 'Foreign-born population, in millions'
+            }
+          },
+          legend: {
+            layout: 'horizontal',
+            align: 'left',
+            verticalAlign: 'top'
+          },
+
+          plotOptions: {
+            line: {
+              marker: {
+                enabled: true
+              }
+            },
+            series: {
+              label: {
+                connectorAllowed: false
+              }
+            }
+          },
+          colors: ['#39F', '#06C', '#036', '#000'],
+          tooltip: {
+            headerFormat: '<b>{point.x:%Y}</b><br>',
+            pointFormat: '{series.name}: {point.y:,.1f}'
+          },
+
+          series: [{
+            name: 'Foreign-born population, in millions',
+            data: [
+            [Date.UTC(1860, 0), 4.1],
+            [Date.UTC(1870, 0), 5.6],
+            [Date.UTC(1880, 0), 6.7],
+            [Date.UTC(1890, 0), 9.2],
+            [Date.UTC(1900, 0), 10.3],
+            [Date.UTC(1910, 0), 13.5],
+            [Date.UTC(1920, 0), 13.9],
+            [Date.UTC(1930, 0), 14.2],
+            [Date.UTC(1940, 0), 11.6],
+            [Date.UTC(1950, 0), 10.3],
+            [Date.UTC(1960, 0), 9.7],
+            [Date.UTC(1970, 0), 9.6],
+            [Date.UTC(1980, 0), 14.1],
+            [Date.UTC(1990, 0), 19.8],
+            [Date.UTC(2000, 0), 31.1],
+            [Date.UTC(2010, 0), 39.9],
+            [Date.UTC(2013, 0), 41.3],
+            [Date.UTC(2014, 0), 42.2],
+            [Date.UTC(2015, 0), 43.2],
+            [Date.UTC(2016, 0), 43.7]
+            ],
+          }],
+
+          responsive: {
+            rules: [{
+              condition: {
+                maxWidth: 500
+              },
+              chartOptions: {
+                legend: {
+                  layout: 'horizontal',
+                  align: 'center',
+                  verticalAlign: 'bottom'
+                }
+              }
+            }]
+          }
+
+        });
+
+  })
+  </script>
