analytics code and data point added

--- a/_includes/charts/pew-population-chart.html
+++ b/_includes/charts/pew-population-chart.html
@@ -56,6 +56,7 @@
           series: [{
             name: 'Foreign-born population, in millions',
             data: [
+            [Date.UTC(1850, 0), 2.2],
             [Date.UTC(1860, 0), 4.1],
             [Date.UTC(1870, 0), 5.6],
             [Date.UTC(1880, 0), 6.7],
