--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,25 +64,35 @@ excerpt_separator: <!--more-->
     </div>
 
     <div class="col s12 m5 pull-m7">
-      <div class="container">
+
     <br />
 
       {% for post in site.posts limit:1  %}
       {% assign currentdate = post.date | date: "%B" %}
       {% if currentdate != date %}
       {% unless forloop.first %}</ul>{% endunless %}
-      <div class="chip">
-        <span id="y{{post.date | date: "%Y"}}">{{ currentdate }}</span>
 
-      </div>
+        <span id="y{{post.date | date: "%Y %B"}}"></span>
 
-      <ul>
+
+
+
+
+
+      <ul class="collection with-header">
+        <li class="collection-header">
+        <h4>Why get law practice SEO à la carte?</h4>
+        </li>
         {% assign date = currentdate %}
         {% endif %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li><a href="{{ post.url }}">
+<div class="collection-item">
+          {{ post.title }}
+        </div>
+        </a></li>
         {% if forloop.last %}</ul>{% endif %}
         {% endfor %}
-      </div>
+
     </div>
   </div>
 
@@ -96,7 +106,7 @@ excerpt_separator: <!--more-->
 
 
   <div class="section">
-        <!-- <h4>Why get law SEO à la carte?</h4> -->
+
         <!-- <h4>Get law SEO à la carte</h4> -->
 
 
