--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,23 @@
     {% include footer.html %}
   </div>
 
+
+  <div class="page-footer final-footer z-depth-1">
+    <div class="footer-copyright">
+      <div class="container">
+        © 2019 Copyright Case Linguist LLC
+        <span itemscope itemtype="http://schema.org/PostalAddress">
+              <span itemprop="streetAddress" content="5829 S. Francisco Ave"/>
+              <span itemprop="addressLocality" content="Chicago, IL">
+              <span itemprop="postalCode" content="60629"/>
+
+            </span>
+          <a class="grey-text text-lighten-4 right" href="mailto:rene@caselinguist.com?subject=Marketing">E-mail: <span itemprop="email">rene@caselinguist.com</span></a>
+      </div>
+    </div>
+  </div>
+  <!-- end second footer -->
+
+
 </body>
 </html>
