--- a/assets/main.scss
+++ b/assets/main.scss
@@ -92,3 +92,9 @@ a:visited, a:hover {
   font-weight: 700;
   font-style: normal;
 }
+
+.page-footer {
+    padding-top: 0px;
+    color: #fff;
+    background-color: #1565C0;
+}
