removed overloaded words

--- a/_includes/pricecards/moz-abogado.html
+++ b/_includes/pricecards/moz-abogado.html
@@ -8,8 +8,7 @@
             <div class="card-stacked">
                 <div class="card-content">
 
-                    Moz: Abogado (es-US), 6.5k-9.3k Monthly Volume.  Volume ranges show you (with 95% or more accuracy) how often a term or phrase is searched for in Google each month.
-
+                    Moz: Abogado (es-US), 6.5k-9.3k Monthly Volume.
 
                 </div>
 
