--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ excerpt_separator: <!--more-->
     <div class="card-panel grey lighten-5 z-depth-1">
       <div class="row v-align-wrapper">
         <div class="col s12 m2">
-          <img class="materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago.jpg' | relative_url }}">
+          <img class="materialboxed center-align responsive-img z-depth-2" width="650" src="{{ '/assets/rene-m-paccha-chicago-250.webp' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.webp' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.webp' | relative_url }} 1000w" alt="rene m paccha professional headshot with willis tower background">
         </div>
         <div class="posts-list">
           <div class="col s12 m10">
