--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %} | {{site.marketing_title}}</title>
+  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ "Home" | escape }}{% endif %} | {{site.marketing_title}}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <!-- realfavicongenerator.com -->
   <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/fav/apple-touch-icon.png' | relative_url }}">
