--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,11 +4,28 @@ excerpt_separator: <!--more-->
 ---
 
 <div class='home home-section section'>
+
+  <!-- adding splash message -->
+  <div id="slide" class="splash-section">
+    <div class="container msg-container">
+      <div class="intro-wrap">
+        <div class="name-text">Rene M. Paccha</div>
+        <div class="paragraph-light">SEO, Case Linguist LLC</div>
+        <h1 class="heading-jumbo">Case Linguist LLC offers a la carte services in marketing that can be catered to your needs.</h1>
+
+      </div>
+
+
+    </div>
+
+  </div>
+
+
   <div class='row'>
     <div class='col s12 m4 l5'>
-      <h1 class='page-heading strong-blog-font'>
-        Posts
-      </h1>
+      <!-- <h2 class='page-heading strong-blog-font'>
+        Pinned Post
+      </h2> -->
       {{ content }}
       <ul class='post-list'>
         {% for post in site.posts limit:1 offset:1 %}
@@ -52,23 +69,29 @@ excerpt_separator: <!--more-->
           <div class="col s12 m10">
 
             <br />
+            <h3 class='page-heading strong-blog-font'>
+              Posts
+            </h3>
 
             {% for post in site.posts limit:1  %}
-            {% assign currentdate = post.date | date: "%Y" %}
+            {% assign currentdate = post.date | date: "%Y %B" %}
             {% if currentdate != date %}
             {% unless forloop.first %}</ul>{% endunless %}
             <span id="y{{post.date | date: "%Y %B"}}">{{currentdate}}</span>
             <ul class="collection with-header">
-              <li class="collection-header">
-                <h4>Posts</h4>
-              </li>
               {% assign date = currentdate %}
               {% endif %}
-              <li><a href="{{ post.url }}">
+              <li>
+
+                <a href="{{ post.url }}">
                 <div class="collection-item">
-                  {{ post.title }}
+                  <span class="badge  btn btn-small btn-flat waves-effect waves-blue ilike-blue-container ">{{ post.date | date:"%m/%d" }}</span>
+                      {{ post.title }}
                 </div>
-              </a></li>
+
+              </a>
+
+            </li>
               {% if forloop.last %}</ul>{% endif %}
               {% endfor %}
 
