--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,1 +1,6 @@
-<a href="//twitter.com/{{ include.username }}"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span><span class="twitter-at-symbol">＠</span><span class="username">{{ include.username }}</span></a>
+<a href="//twitter.com/{{ include.username }}">
+  <i class="fab fa-twitter green-text"></i>
+  <!-- <span class="icon icon--twitter">{% include icon-twitter.svg %}</span> -->
+
+  <span class="username green-text">＠{{ include.username }}</span>
+</a>
