--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ "Home" | escape }}{% endif %} | {{site.marketing_title}}</title>
+  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ "Home" | escape }}{% endif %} | {{ site.marketing_title }}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <!-- realfavicongenerator.com -->
   <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/fav/apple-touch-icon.png' | relative_url }}">
@@ -22,12 +22,10 @@
   <link href="https://fonts.googleapis.com/css?family=Assistant|Cabin" rel="stylesheet">
 
   <!-- font awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.css" integrity="sha256-BbA16MRVnPLkcJWY/l5MsqhyOIQr7OpgUAkYkKVvYco=" crossorigin="anonymous" />
 
   <!-- materialize -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" integrity="sha256-U/cHDMTIHCeMcvehBv1xQ052bPSbJtbuiw4QA9cTKz0=" crossorigin="anonymous"></script>
-  <!-- payment -->
-  <script src="https://js.braintreegateway.com/web/dropin/1.16.0/js/dropin.min.js"></script>
 
 
   <link rel="stylesheet" href='{{ "/assets/main.css" | relative_url }}'>
