--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ excerpt_separator: <!--more-->
       <div class="intro-wrap">
         <div class="name-text">Rene M. Paccha</div>
         <div class="paragraph-light">SEO, Case Linguist LLC</div>
-        <h1 class="heading-jumbo">Case Linguist LLC offers a la carte services in marketing that can be catered to your needs.</h1>
+        <h1 class="heading-jumbo">Case Linguist LLC offers internet marketing services in marketing that can be catered to your needs.</h1>
 
       </div>
 
