--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,14 @@ excerpt_separator: <!--more-->
 ---
 
 <div class='home home-section section'>
+  <div class="logo-wrap valign-wrapper">
+    <div class="row">
+    <span class="center-align"><img  src="assets/logo.png" width="120" alt="logo"></span>      
+    </div>
+
+
+  </div>
+
 
   <!-- adding splash message -->
   <div id="slide" class="splash-section">
