--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,14 +61,15 @@ excerpt_separator: <!--more-->
 <div class="section">
   <br/>
 
-  <div class="col s12 m8 offset-m2 l6 offset-13">
-    <div class="card-panel grey lighten-5 z-depth-1">
+  <div class="col s12 m6">
+    <div class="card-panel">
       <div class="row v-align-wrapper">
-        <div class="col s12 m2">
-          <img class="materialboxed center-align responsive-img z-depth-2" width="650" src="{{ '/assets/rene-m-paccha-chicago-250.png' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.png' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.png' | relative_url }} 1000w" alt="rene m paccha professional headshot with willis tower background">
+        <div class="col s12 m6">
+          <!-- image -->
+          <img class="materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago-250.png' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.png' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.png' | relative_url }} 1000w" alt="rene m paccha professional headshot with willis tower background">
         </div>
         <div class="posts-list">
-          <div class="col s12 m10">
+          <div class="col s12 m6">
 
             <br />
             <h3 class='page-heading strong-blog-font'>
