--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,15 +7,15 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ "Home" | escape }}{% endif %} | {{ site.marketing_title }}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <!-- realfavicongenerator.com -->
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/fav/apple-touch-icon.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/fav/favicon-32x32.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/fav/favicon-16x16.png' | relative_url }}">
-  <link rel="manifest" href="{{ '/assets/fav/site.webmanifest' | relative_url }}">
-  <link rel="mask-icon" href="{{ '/assets/fav/safari-pinned-tab.svg' | relative_url }}" color="#2b5797">
-  <link rel="shortcut icon" href="{{ '/assets/fav/favicon.ico' | relative_url }}">
-  <meta name="msapplication-TileColor" content="#ffc40d">
-  <meta name="msapplication-config" content="{{ '/assets/fav/browserconfig.xml' | relative_url }}">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/fav/apple-touch-icon.png?v=NmP7vN2QE7' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/fav/favicon-32x32.png?v=NmP7vN2QE7' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/fav/favicon-16x16.png?v=NmP7vN2QE7' | relative_url }}">
+  <link rel="manifest" href="{{ '/assets/fav/site.webmanifest?v=NmP7vN2QE7' | relative_url }}">
+  <link rel="mask-icon" href="{{ '/assets/fav/safari-pinned-tab.svg?v=NmP7vN2QE7' | relative_url }}" color="#5bbad5">
+  <link rel="shortcut icon" href="{{ '/assets/fav/favicon.ico?v=NmP7vN2QE7' | relative_url }}">
+  <meta name="msapplication-TileColor" content="#5fa0a1">
+  <meta name="msapplication-config" content="{{ '/assets/fav/browserconfig.xml?v=NmP7vN2QE7' | relative_url }}">
+  <meta name="theme-color" content="#5fa0a1">
 
 
   <!-- google fonts -->
