updating default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
               <span itemprop="postalCode" content="60629"/>
 
             </span>
-          <a class="grey-text text-lighten-4 right" href="mailto:rene@caselinguist.com?subject=Marketing">E-mail: <span itemprop="email">rene@caselinguist.com</span></a>
+          <a class="grey-text text-lighten-4 right" href="mailto:rene@caselinguist.com?subject=Marketing"><span itemprop="email">rene@caselinguist.com</span></a>
       </div>
     </div>
   </div>
