updating home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,8 +108,10 @@ excerpt_separator: <!--more-->
                     <!-- secondary date content -->
 
                     <span class="badge btn btn-small btn-flat waves-effect waves-blue ilike-blue-container">
+                    <div>
 
                       <span id='y_{{post.date | date: "%Y_%B"}}' class="shifty-date date-sub-display">{{currentdate}}</span>
+                      </div>
                     </span>
                   </div>
                 </a>
