updated text color

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -116,7 +116,7 @@ excerpt_separator: <!--more-->
 
                   <!-- for small devices -->
                   <div class="show-on-small hide-on-med-and-up">
-                    <span id='y_{{post.date | date: "%Y_%B"}}' class="shifty-date date-sub-display">{{currentdate}}</span>
+                    <span id='y_{{post.date | date: "%Y_%B"}}' class="grey-text shifty-date date-sub-display">{{currentdate}}</span>
                   </div>
 
                 </a>
