updating home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -133,7 +133,7 @@ excerpt_separator: <!--more-->
   <div class="divider"></div>
   <div class="section">
 
-      <a href="{{ '/about' | relative_url }}"><h4 class="flow-text">Based in Chicago, IL</h4></a>
+      <a href="{{ '/about/' | relative_url }}"><h4 class="flow-text">Based in Chicago, IL</h4></a>
     <!-- image start -->
     <div class="col s12 m6">
 
