--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <div class="page-footer final-footer z-depth-1">
     <div class="footer-copyright">
       <div class="container">
-        © 2019 Case Linguist LLC
+        © 2019 Case Linguist
         <span itemscope itemtype="http://schema.org/PostalAddress">
               <span itemprop="streetAddress" content="5829 S. Francisco Ave"/>
               <span itemprop="addressLocality" content="Chicago, IL">
